--- a/connect4.html
+++ b/connect4.html
@@ -1,5 +1,5 @@
-<!-- audio code credit to karen @https://github.com/ksivaneri001/pset-9
-/ @  https://ksivaneri001.github.io/pset-9/index.html-->
+<!-- audio code credit to worldleader210 @https://github.com/worldleader210/pset-9
+/ @  https://worldleader210.github.io/pset-9/index.html-->
 
 <!DOCTYPE html>
 <html lang="en">
